# linkedin-intelligence_2

./: README.md  app.py  pyproject.toml
audience_enrichment/: __init__.py  classifiers.py  enrichment.py  loaders.py
docs/source/: changelog.rst  conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: classifiers.rst  enrichment.rst  loaders.rst
tests/: conftest.py  test_classifiers.py  test_enrichment.py  test_loaders.py
