[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audience_enrichment"
version = "0.1.0"
description = "Enrichissement de listes de participants par croisement de sources (LinkedIn, Congrès, Livestorm)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "openpyxl>=3.0",
    "rapidfuzz>=3.0",
    "streamlit>=1.50.0",
    "plotly>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["audience_enrichment"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.1.0",
]
